<resources>
    <string name="app_name">TuPlan</string>

    <string name="name">Nombre</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Confirmar Contraseña</string>

    <string name="loginTitle">Login</string>
    <string name="registerTitle">Register</string>
    <string name="homeTitle">Home</string>

    <string name="loginButton">Ingresar</string>
    <string name="registerButton">Registrarse</string>
    <string name="logoutButton">Salir</string>

    <string name="noAccountQuestion">¿No tienes cuenta?</string>
    <string name="alreadyAccountQuestion">¿Ya tienes cuenta?</string>
    <string name="orText">o</string>

    <string name="nameError">Ingresa tu nombre</string>
    <string name="emailError">Ingresa un email válido</string>
    <string name="passwordError">Ingresa mínimo 6 caracteres</string>
    <string name="inputConfirmPassword">Confirmación incorrecta</string>
    <string name="registerError">Error realizando el registro</string>
    <string name="loginError">Credenciales inválidas</string>

    <string name="clas_prompt">Seleccione status</string>
    <string-array name="clas_status">
        <item>Seleccione status</item>
        <item>Completado</item>
        <item>Pendiente</item>
    </string-array>
    <string name="clas_prior">Seleccione prioridad</string>
    <string-array name="clas_priority">
        <item>Seleccione la prioridad</item>
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>

</resources>
